# slTerminal

./: .gitignore  CONTEXT.md  DdatalearncodeslTerminaltest-output.json  LICENSE  eslint.config.js  index.html  package-lock.json  package.json  slterminal-projects.json  test-collapse-diagnostic.html  test-inline-scripts.html  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.l3.config.ts  wdio.conf.ts
.claude/: CLAUDE.md  adr.md  package.ps1  test-inventory.md
.claude/rules/: audit-review.md  plan-generation.md
.github/workflows/: ci.yml
docs/: 00-summary.md  01-frontend-architecture.md  02-backend-architecture.md  03-code-quality.md  04-test-system.md  05-performance-maintainability.md  commit-view-requirements.md  commit-view-review.md  refactoring-checklist.md  sidebar-checklist.md  sidebar-execution-plan.md  sidebar-requirements.md
docs/adr/: 0001-two-process-model.md  0002-conpty-spawn-lock.md  0003-channel-ringbuffer-reattach.md  0004-multi-dockview-instances.md  0005-watcher-pool-pause-resume.md  0006-shell-integration-encodedcommand.md  0007-ctrl-c-interrupt.md  0008-ten-hard-constraints.md  0009-zustand-session-truth.md  0010-embedded-webdriver-e2e.md
docs/claude/: investigation-1-flicker.md  investigation-2-colors.md  investigation-3-resize.md  investigation-4-clipboard.md  investigation-5-misc.md  investigation-directions.md
docs/commit-view/: checklist.md  execution-plan.md  review.md  stages.md
docs/debug/: debug-checklist.md  debug-execution-plan.md  refactor-regressions.md
docs/refacotr/: execution-plan.md  refactoring-checklist.md  refactoring-stages.md
docs/review/: review-00-summary.md  review-01-rust-backend.md  review-02-frontend-react.md  review-03-tests.md  review-04-docs-consistency.md  review-05-arch-constraints.md  review-06-security.md
docs/workflows/: fix-loop.js  stage-01-git-backend.js  stage-01-state-layer.js  stage-02-fe-infra.js  stage-02-ui-components.js  stage-03-gitshow-panel.js  stage-03-workspace-integration.js  stage-04-diff-panel.js  stage-04-e2e.js  stage-05-commit-view.js  stage-05-docs-sync.js  stage-06-e2e.js  stage-07-docs.js
e2e-tests/: CLAUDE.md  gitScaffold.ts  helpers.ts  package.json  run-wdio.cjs  test.e2e.ts  wdio.conf.js  wdio.conf.ts
plan/: 1. 需求与分阶段计划.md  2. 详细方案与最小demo.md  3. 技术架构设计文档.md  4. 完整开发计划.md  5.0 phase-0-工程与测试基建.md  5.1 phase-1-核心外壳.md  5.2 phase-2-侧边栏与项目结构.md  5.3 phase-3-文件浏览器与编辑器增强.md  5.4 phase-4-git与python状态栏.md  5.5 phase-5-claude-code集成.md  5.6 phase-6-体验完善.md  version-pins.md
plan/execute/: Phase 0 执行计划.md  Phase 0 结果验证.md  Phase 0 验收审计.md  Phase 1 执行计划审查.md  Phase 1 结果验证.md  Phase 1 补救执行计划.md  Phase 1 补救执行计划审查.md  Phase 1 验收审计.md
reference/: xtermjs-rendering-engine-report.html
src/: App.css  App.tsx  global.d.ts  main.tsx  panelRegistry.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: shell-integration.ps1
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  projects.rs  settings.rs  state.rs
src-tauri/src/fs/: CLAUDE.md  mod.rs
src-tauri/src/git/: CLAUDE.md  mod.rs  worktree.rs
src-tauri/src/notify/: CLAUDE.md  mod.rs  pool.rs
src-tauri/src/pty/: CLAUDE.md  mod.rs  reader.rs  shell.rs  spawn.rs  win_build.rs
src-tauri/tests/: integration_test.rs  pty_integration_tests.rs
src/__tests__/: App.test.tsx  CLAUDE.md  FileViewerRegistry.test.ts  TabTitleRegistry.test.ts  activeEditor.test.ts  activeExplorer.test.ts  activeTerminal.test.ts  activityBar.test.tsx  bootstrap.test.ts  canFit.test.ts  close-handler.test.ts  colors.test.ts  command-catalog.test.ts  commandCatalog.test.ts  commit-context-menu.test.ts  commit-view.test.tsx  csp-config.test.ts  default-layout-format.test.ts  detectWebgl.test.ts  diff-alignment.test.ts  diff-panel.test.tsx  e2e-build-config.test.ts  e2e-clipboard-helper.test.ts  e2e-create-project.test.ts  e2e-enabled.test.ts  e2e-gating-terminal.test.ts  e2e-gating-workspace.test.tsx  editor-confirm.test.ts  editor-font.test.ts  editor-keyboard.test.ts  editor.test.tsx  error-boundary.test.tsx  explorer-delete.test.tsx  explorer-file-viewer.test.tsx  explorer-fileViewer.test.tsx  explorer-focus.test.tsx  explorer-git-status.test.tsx  explorer-keyboard.test.ts  explorer-notify.test.tsx  explorer-refresh-preserve.test.tsx  (+68 more)
src/features/: index.ts
src/ipc/: CLAUDE.md  clipboard.ts  dialog.ts  fs.ts  git.ts  index.ts  notify.ts  projects.ts  pty.ts  settings.ts  shell.ts  window.ts
src/lib/: CLAUDE.md  ErrorBoundary.tsx  activePointer.ts  e2eEnabled.ts  index.ts  injectScript.ts  path.ts  useFontSizeWheel.ts
src/panels/: CLAUDE.md  index.ts
src/stores/: CLAUDE.md  fontSize.ts  index.ts  keybindings.ts  layout.ts  projects.ts  sessions.ts  sideBar.ts
src/theme/: colors.ts  index.ts
src/types/: fs.ts  git.ts  index.ts  notify.ts  pty.ts
src/workspace/: CLAUDE.md  PageDockviewHost.tsx  Workspace.tsx  index.ts  layoutSerde.ts  panelRegistry.ts  titleManager.ts
temp/: test-execution-guide.html
test/specs/: test.e2e.ts
(+188 files in other folders)
